// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrentAmount.vue > Snapshots > should match snapshot with negative amount 1`] = `
"<div class="v-banner v-banner--stacked v-banner--sticky v-theme--light v-banner--density-default v-banner--mobile elevation-4" role="banner">
  <div class="v-banner__prepend">
    <div class="v-avatar v-theme--light bg-surface v-avatar--density-default v-avatar--size-default v-avatar--variant-flat"><i class="fa-piggy-bank mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
      <!----><span class="v-avatar__underlay"></span>
    </div>
  </div>
  <div class="v-banner__content">
    <div class="v-banner-text"><span class="text-body-2 text-medium-emphasis mr-2">Aktueller Betrag:</span><strong class="text-error text-h4 font-weight-bold">-1.234,56&nbsp;€</strong></div>
    <!---->
    <!---->
  </div>
  <div class="v-banner-actions"><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Ändern</span>
      <!---->
      <!---->
    </button></div>
</div>"
`;

exports[`CurrentAmount.vue > Snapshots > should match snapshot with positive amount 1`] = `
"<div class="v-banner v-banner--stacked v-banner--sticky v-theme--light v-banner--density-default v-banner--mobile elevation-4" role="banner">
  <div class="v-banner__prepend">
    <div class="v-avatar v-theme--light bg-surface-bright v-avatar--density-default v-avatar--size-default v-avatar--variant-flat"><i class="fa-piggy-bank mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
      <!----><span class="v-avatar__underlay"></span>
    </div>
  </div>
  <div class="v-banner__content">
    <div class="v-banner-text"><span class="text-body-2 text-medium-emphasis mr-2">Aktueller Betrag:</span><strong class="text-success text-h4 font-weight-bold">5.000,50&nbsp;€</strong></div>
    <!---->
    <!---->
  </div>
  <div class="v-banner-actions"><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Ändern</span>
      <!---->
      <!---->
    </button></div>
</div>"
`;

exports[`CurrentAmount.vue > Snapshots > should match snapshot with zero amount 1`] = `
"<div class="v-banner v-banner--stacked v-banner--sticky v-theme--light v-banner--density-default v-banner--mobile elevation-4" role="banner">
  <div class="v-banner__prepend">
    <div class="v-avatar v-theme--light bg-surface-bright v-avatar--density-default v-avatar--size-default v-avatar--variant-flat"><i class="fa-piggy-bank mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
      <!----><span class="v-avatar__underlay"></span>
    </div>
  </div>
  <div class="v-banner__content">
    <div class="v-banner-text"><span class="text-body-2 text-medium-emphasis mr-2">Aktueller Betrag:</span><strong class="text-neutral text-h4 font-weight-bold">0,00&nbsp;€</strong></div>
    <!---->
    <!---->
  </div>
  <div class="v-banner-actions"><button type="button" class="v-btn v-btn--slim v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Ändern</span>
      <!---->
      <!---->
    </button></div>
</div>"
`;
